auth_traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-traefik
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-auth
